[2018-09-04 Tue]
- Fixes https://github.com/agzam/exwm-edit/issues/4 (hopefully)

[2018-08-12 Sun]
- Fix for https://github.com/agzam/exwm-edit/issues/3 - Add multilang support

[2018-06-29 Fri]

- it now automatically determines if something is pre-selected and edits only that piece (before it required passing a universal argument)