@@ -1,22 +1,3 @@
-* Caution
-  Recently there seem to be a number of changes in exwm and xelb projects that break some of the behaviors of this package. Namely - it won't paste the content back on ~C-c C-c~ (you have to manually do it). Until this fixed in EXWM you can pin the following commits:
-
-https://github.com/ch11ng/xelb/commit/fe1b643e98ea4a87a3eed41b0bbaf6c12dfcfbec
-https://github.com/ch11ng/exwm/commit/b75c89cae2a1c4c70044f885c44a95fd2f9950dd
-
-** See also [[https://github.com/agzam/exwm-edit/issues/5][#5]]
-** In Spacemacs pinning a specific commit version can be done like this:
-  #+begin_src emacs-lisp
-    (xelb :location (recipe :fetcher github
-                            :repo "ch11ng/xelb"
-                            :commit "fe1b643e98ea4a87a3eed41b0bbaf6c12dfcfbec")
-          :step pre)
-    (exwm :location (recipe :fetcher github
-                            :repo "ch11ng/exwm"
-                            :commit "b75c89cae2a1c4c70044f885c44a95fd2f9950dd")
-          :step pre)
-  #+end_src
-
 * Description
   Edit mode for [[https://github.com/ch11ng/exwm][EXWM]]
 
